src/objects/Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Default_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Role</label>
        <referenceTo>LOV__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>This field contains meanings of complex words in the checklist instructions</description>
        <label>Help Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructions_TF__c</fullName>
        <inlineHelpText>This is a backend field</inlineHelpText>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the Checklist Item is Mandatory &amp; has no Study Attributes/Question Responses.</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Action?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_TF__c</fullName>
        <label>Process_TF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ideation</fullName>
                </value>
                <value>
                    <fullName>Secure Resources</fullName>
                </value>
                <value>
                    <fullName>Study Development</fullName>
                </value>
                <value>
                    <fullName>Study Execution</fullName>
                </value>
                <value>
                    <fullName>Oversee Execution of Research</fullName>
                </value>
                <value>
                    <fullName>Data Analysis and Reporting</fullName>
                </value>
                <value>
                    <fullName>Study Deliverable(s) and Results</fullName>
                </value>
                <value>
                    <fullName>Review/ Approve Study Deliverable</fullName>
                </value>
                <value>
                    <fullName>Finalize, Store Study Deliverables</fullName>
                </value>
                <value>
                    <fullName>Close Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Comments__c</fullName>
        <label>Version Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Checklist Item</label>
    <listViews>
        <fullName>All_Checklist_Items_Detailed_view</fullName>
        <columns>NAME</columns>
        <columns>Instructions__c</columns>
        <columns>Process__c</columns>
        <columns>Mandatory__c</columns>
        <columns>Milestone__c</columns>
        <columns>Instructions_TF__c</columns>
        <columns>Version_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Checklist Items Detailed view</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Checklist_Mandatory</fullName>
        <columns>NAME</columns>
        <columns>Instructions_TF__c</columns>
        <filterScope>Everything</filterScope>
        <label>Checklist Mandatory</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CI -{000}</displayFormat>
        <label>Checklist Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>